--- a/localisation/TD_01_flavour_bunelisuli_l_english.yml
+++ b/localisation/TD_01_flavour_bunelisuli_l_english.yml
@@ -13,3 +13,21 @@
  chotgoriin_nuntag_reform_desc:0 "The Devil's Powder allowed the Bunelisuli Empire to conquer the known world. We must continue exploring this technological advancement and integrate it with our cavalry tradition even more."
  baruun_zam_reform:0 "Baruun Zam"
  baruun_zam_reform_desc:0 "The great sunset road stretching from Tövdov to Gkylyl was a backbone of our Empire."
+
+ khumaarati_group_ideas:0 "Khumaarati Minor Ideas"
+ khumaarati_group_ideas_bonus:0 "Khumaarati Minor Ambition"
+ khumaarati_group_ideas_start:0 "Khumaarati Minor Traditions"
+ khumaarati_bunelisuli_influences:0 "Bunelisuli Influence"
+ khumaarati_bunelisuli_influences_desc:0 "Our long history with the southern nomads has always been mutually beneficial. We adopted many of their traditions and innovations, while we provided them with various goods."
+ khumaarati_fish_and_fur:0 "Fish and Fur"
+ khumaarati_fish_and_fur_desc:0 "Our two major exports are furs hunted in the northern forests and fishes, hunted in vast waterways which cut through or lands."
+ khumaarati_heisen_contacts:0 "Heisen Contacts"
+ khumaarati_heisen_contacts_desc:0 "Some Heisean merchants have decided to avoid Lamengian tarrifs to Bunelisulia and instead sail around to meet us in Shugiyen. Now both of our peoples can enjoy far cheaper goods."
+ khumaarati_defending_our_land:0 "Defending Our Land"
+ khumaarati_defending_our_land_desc:0 "Wild people of the forest often raid our settlements, ravaging deep into the coutryside. We have to make sure that our people can live safely without a threat of barbaric harassment."
+ khumaarati_eolumgil_trade:0 "Eolumgil Trade"
+ khumaarati_eolumgil_trade_desc:0 "Great river of Eolumgil is what connects western Khumaaratia with the coast, allowing us to effectively move goods to trade with the Heisen people."
+ khumaarati_scourge_of_khutigaria:0 "Scourge of Khutigaria"
+ khumaarati_scourge_of_khutigaria_desc:0 "When people in the west saw our great banner of blue and white stripes, they knew it was an omen of death. Our raiders never lost a battle and never left a city unsacked."
+ khumaarati_into_the_forest:0 "Into the Forest"
+ khumaarati_into_the_forest_desc:0 "Northern forest are incredibely dangerous not only due to savages, but also the inhospitable climate and hostile wildlife, but when our neighbours grow stronger with each passing day, this is our best way of expansion."
