renames and fixes

--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -67,9 +67,9 @@
  indriger_new_land:0 "New Land"
  indriger_new_land_desc:0 "After reaching unpassable ice wastelands in the east, many turned their attention to the west where western explorers reported a whole new continent. Many of our people are eager to discover this new distand land."
 
- puiduhakkurmaan_ideas:0 "Puiduhakkurmaan Ideas"
- puiduhakkurmaan_ideas_bonus:0 "Puiduhakkurmaan Ambition"
- puiduhakkurmaan_ideas_start:0 "Puiduhakkurmaan Traditions"
+ puiduhakkurmaan_ideas:0 "Puuraidemaa n Ideas"
+ puiduhakkurmaan_ideas_bonus:0 "Puuraidemaa n Ambition"
+ puiduhakkurmaan_ideas_start:0 "Puuraidemaa n Traditions"
  puid_old_forts:0 "The Forts of Old"
  puid_old_forts_desc:0 "Even when our nation was barely even in the cradle, we knew how to construct fortifications in order to protect ourselves from foreign threats. Locations of many of those forts remain vital strategic poins of interest to us and the old castles are being constantly modernized."
  puid_northern_king:0 "Northern King"
