--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -58,8 +58,8 @@
  VEN:0 "Venaklulle"
  VEN_ADJ:0 "Venaklullen"
  
- PUI:0 "Puiduhakkurmaa"
- PUI_ADJ:0 "Puiduhakkurmic"
+ PUI:0 "Puuraidemaa"
+ PUI_ADJ:0 "Puuraidemaan"
  POH:0 "Pohjavalvur"
  POH_ADJ:0 "Pohjavalvic"
  MLP:0 "Maalopp"
