--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -220,7 +220,7 @@
  PROV219:0 "Liškar"
  PROV220:0 "Zawarmahz"
  PROV221:0 "Hercogaostan Coast"
- PROV222:0 "Eemaamin"
+ PROV222:0 "Rahala "
  PROV223:0 "Lauagusa"
  PROV224:0 "Helasam"
  PROV225:0 "Bagdur"
@@ -316,24 +316,24 @@
  PROV315:0 "Sadamainult"
  PROV316:0 "Veiniistandus"
  PROV317:0 "Bukutyer"
- PROV318:0 "Välismaalane"
+ PROV318:0 "Võõrasnurme"
  PROV319:0 "Piirilinn"
- PROV320:0 "Kõrbes"
+ PROV320:0 "Alemetsa"
  PROV321:0 "Oslugor"
  PROV322:0 "Southern Gandari Sea"
  PROV323:0 "Karusalu"
- PROV324:0 "Kõla"
- PROV325:0 "Määdnu"
- PROV326:0 "kaevandus"
+ PROV324:0 "Väinakallas"
+ PROV325:0 "Aletaguste"
+ PROV326:0 "Kaevumaa"
  PROV327:0 "Mutovian Bay"
- PROV328:0 "Pühakoda"
- PROV329:0 "Pruumets"
+ PROV328:0 "Hiidemaa"
+ PROV329:0 "Pruunmetsa"
  PROV330:0 "Musornaq"
  PROV331:0 "Quusak"
  PROV332:0 "Meyadaq"
  PROV333:0 "Furmarian Sea"
- PROV334:0 "Sinisaar"
- PROV335:0 "Ristumaa"
+ PROV334:0 "Muinaspiiri"
+ PROV335:0 "Ristjõe"
  PROV336:0 "Kultargaan"
  PROV337:0 "Siriniid"
  PROV338:0 "Salin"
