--- a/localisation/TD_01_Flavour_Ibliguz_l_english.yml
+++ b/localisation/TD_01_Flavour_Ibliguz_l_english.yml
@@ -9,6 +9,9 @@
  IBL_gug_the_immortal:0 "The Scarred"
 
 
+ ibliguzi_gug_ideas:0 "Ibliguzi Ideas"
+ ibliguzi_gug_ideas_bonus:0 "Ibliguzi Ambition"
+ ibliguzi_gug_ideas_start:0 "Ibliguzi Traditions"
  ibliguzi_ideas:0 "Ibliguzi Ideas"
  ibliguzi_ideas_bonus:0 "Ibliguzi Ambition"
  ibliguzi_ideas_start:0 "Ibliguzi Traditions"
