--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -886,3 +886,29 @@
  nochnea_area:0 "Nochnea"
  lohnle_area:0 "Lohnle"
  luavph_area:0 "Luavph"
+
+ hasrdar_area:0 "Hašradar"
+ takkarabh_area:0 "Takkarabh"
+ tsamnu_area:0 "Tsamnu"
+ agzatam_area:0 "Agzatam"
+ akasay_area:0 "Akasay"
+ tarbtagan_area:0 "Tarbtagan"
+ anfmahan_area:0 "Anfmahan"
+ tiwarmalan_area:0 "Tiwarmalan"
+ ekra_area:0 "Ekra"
+ makarr_area:0 "Makarr"
+ tawlasufr_area:0 "Tawlasufr"
+ iwalina_area:0 "Iwalina"
+ igal_area:0 "Igal"
+ saalbajon_area:0 "Saalbajon"
+ batupa_area:0 "Batupa"
+ tampiir_area:0 "Tampiir"
+ huudaje_area:0 "Huudaje"
+ janfaroo_area:0 "Janfaroo"
+ sanooma_area:0 "Sanooma"
+ baanoo_area:0 "Baanoo"
+ selkan_area:0 "Selkan"
+ dewala_area:0 "Dewala"
+ demdeen_area:0 "Damdeen"
+ mbalan_area:0 "Mbalan"
+ hudaka_area:0 "Hudaka"
