--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -511,3 +511,21 @@
  braissli:0 "Braissli"
  lamedinian:0 "Lamedinian"
  amassani:0 "Amassani"
+ tayufan:0 "Tayufan"
+
+ jambakan_group:0 "Jambakan"
+ sanooman:0 "Sanooman"
+ batupan:0 "Batupan"
+ jaatan:0 "Jaatan"
+ baani:0 "Baani"
+ saalbani:0 "Saalbani"
+
+ buluban_group:0 "Buluban"
+ bimbiji:0 "Bimbiji"
+ demdeenian:0 "Demdeenian"
+ dewalan:0 "Dewalan"
+ ferla:0 "Ferla"
+
+ yamdan:0 "Yamdan"
+ tampiiaga:0 "Tamppiiaga"
+ bendrepaga:0 "Bedregapa"
