--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -96,3 +96,6 @@
  western_pisachaian_ocean_region:0 "Western Pisachaian Ocean"
  pipobsa_region:0 "Pipobsa"
  tukyeung_region:0 "Tukyeung"
+ azguramajal_region:0 "Azguramajal"
+ upper_jambaka_region:0 "Upper Jambaka"
+ imamlayka_region:0 "Imamlayka"
