--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -912,3 +912,7 @@
  demdeen_area:0 "Damdeen"
  mbalan_area:0 "Mbalan"
  hudaka_area:0 "Hudaka"
+ sapalonia_area:0 "Sapalonia"
+ antawil_area:0 "Antawil"
+ kahnar_area:0 "Kahnar"
+ aragsin_area:0 "Aragsin"
