--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -526,6 +526,6 @@
  dewalan:0 "Dewalan"
  ferla:0 "Ferla"
 
- yamdan:0 "Yamdan"
+ yamdan_group:0 "Yamdan"
  tampiiaga:0 "Tamppiiaga"
  bendrepaga:0 "Bedregapa"
