--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -24,8 +24,8 @@
  mezonian_strait_tradenode:0 "Mezonian Strait"
  eyinar_tradenode:0 "Nahrakdar"
  fawud_tradenode:0 "Sayaanud"
- muzbah_tradenode:0 "Muzbah"
- antawil_tradenode:0 "Antawil"
+ muzbah_tradenode:0 "Kotorat"
+ antawil_tradenode:0 "Talkimar"
  panourgian_sea_tradenode:0 "Panourgian Sea"
  kidinare_tradenode:0 "Kidinare"
  timis_tradenode:0 "Timis"
