--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -164,3 +164,21 @@
  has_enabled_changing_schools:0 "Has enabled changing schools"
  TD_recently_changed_schools_modifier:0 "Recently Changed Schools"
  desc_TD_recently_changed_schools_modifier:0 "Our monarch decided to lead us on a new path which caused some internal unrest."
+
+ henling_group_ideas:0 "Henlen Minor Ideas"
+ henling_group_ideas_bonus:0 "Henlen Minor Ambition"
+ henling_group_ideas_start:0 "Henlen Minor Traditions"
+ henling_pemenian_granary:0 "Pemenian Granary"
+ henling_pemenian_granary_desc:0 "Many of the cities in and around Tsinhoi rely on the grain produced somewhere along Zimahei or one of her tributaries, providing us not only with wealth, but also valuable leverage."
+ henling_gods_and_scholars:0 "Gods and Scholars"
+ henling_gods_and_scholars_desc:0 "High granularity of various religious beliefs have led the people of Hengtua to be much more tolerant and scholarly in their spiritual approach to life, making every person's moral compass and beliefs different."
+ henling_nine_ancient_cities:0 "Nine Ancient Cities"
+ henling_nine_ancient_cities_desc:0 "In a distant era when Henling was united, there existed nine cities, which to this day are enshrouded in plethora of legends. While most of them have fallen, the remaining three still hold important cultural, economical and political functions."
+ henling_expansive_courts:0 "Expansive Courts"
+ henling_expansive_courts_desc:0 "Megalomania of many Zhuquans have led to massive, hundred-people courts becoming not only a sign of prestige, but something necessary to be taken seriously in diplomatic affairs. While incredibly burdensome for the economy, it provides us with a needed intelectual elite."
+ henling_silk_and_porcelain:0 "Silk and Porcelain"
+ henling_silk_and_porcelain_desc:0 "Besides grain, our kingdoms are also known for the invention of silk and porcelain, which still remain a vital part of securing our status on the worldly stage."
+ henling_homeland_of_gunnery:0 "Homeland of Gunnery"
+ henling_homeland_of_gunnery_desc:0 "The Huoban, also known in the west as gunpowder, was mostly considered a festive attraction for most of its history, but due to the warlord wars of the thirteenth century, it's significance as a powerful weapon grew, leading to arms race of inventing new ways to make it more deadly."
+ henling_dreams_of_unity:0 "Dreams of Unity"
+ henling_dreams_of_unity_desc:0 "Distant ages of unified Zimahei have long passed. While those golden days may be gone, many still will do everything in the power to be known as the 'second unifier'. There is no doubt that if unity will ever come, it will not be through peaceful means."
