--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -363,7 +363,7 @@
  wugecho:0 "Wugecho"
  yudeza:0 "Yudeza"
 
- hengtuan_group:0 "Henling"
+ hengtuan_group:0 "Henlen"
  xilei:0 "Xilei"
  ziahei:0 "Ziahei"
  xun:0 "Xun"
