--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -144,3 +144,6 @@
 
  kingdom_of_the_sun_reform:0 "Kingdom of the Sun"
  kingdom_of_the_sun_reform_desc:0 "These lands are being protected by Lord of the Sun, this title isn't hereditary and can be usurped by any other lord that controls palace of the first lord. Because of this his power over his dominion isn't absolute and his subjects often descend into chaos."
+
+ isolationist_monarchy_reform:0 "Isolationist Monarchy"
+ isolationist_monarchy_reform_desc:0 "Our ruler don't want communicate with other states to maintain security over its domain. Because of that we don't have a lot of state personel that can govern any additional lands."
