--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1364,3 +1364,19 @@
  KRA_ADJ:0 "Kramdatrian"
  ZIB:0 "Zibarat"
  ZIB_ADJ:0 "Zibarati"
+ ANK:0 "Anaksaan"
+ ANK_ADJ:0 "Anaksaani"
+ DAE:0 "Daertuk"
+ DAE_ADJ:0 "Daertuki"
+ DLH:0 "Delheunh"
+ DLH_ADJ:0 "Delheuni"
+ KRH:0 "Karkhangot"
+ KRH_ADJ:0 "Karkhangoti"
+ MOK:0 "Mokrgat"
+ MOK_ADJ:0 "Mokrgati"
+ PUN:0 "Phoungat"
+ PUN_ADJ:0 "Phoungati"
+ SHK:0 "Sahakarn"
+ SHK_ADJ:0 "Sahakarni"
+ TSC:0 "Tosecha"
+ TSC_ADJ:0 "Tosechan"
