--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -69,3 +69,21 @@
  itulan_advanced_fortifications_desc:0 "With many cases where Hit and Run tactics have failed us, we had to resort to defending ourselves in fortresses and other fortifications. With time, we naturally started picked up art of making better fortifications."
  itulan_second_coming_of_easterners:0 "Second Coming of Easterners"
  itulan_second_coming_of_easterners_desc:0 "Many of us thought that stories about 'Gods of Death' from the east was nothing more than a fairytale, used to frighten small children, but now they are back, and want to conquer us, but they will meet our fierce resistance."
+
+ lummak_group_ideas:0 "Lummak Minor Ideas"
+ lummak_group_ideas_bonus:0 "Lummak Minor Ambition"
+ lummak_group_ideas_start:0 "Lummak Minor Traditions"
+ lummak_land_of_ilchans:0 "Land of Ilchans"
+ lummak_land_of_ilchans_desc:0 "Ilchans serve a dual purpose. On one hand, they are temples where animal sacrifices and rituals are practiced, but they also are used by our astrologist to study the heaven and the skies."
+ lummak_starry_truth:0 "Starry Truth"
+ lummak_starry_truth_desc:0 "It is believed that each star that occupies the night sky was once a great person who ascended to godhood thanks to their deep understanding of the world. If we study the sky, we might also get closer to the nature of the world."
+ lummak_together_against_invaders:0 "Together Against Invaders"
+ lummak_together_against_invaders_desc:0 "Our people are under constant pressure from our neighbors. Tonatitlan seeks to expand their influence into the jungle, Itulan tribes migrate into our lands and recently a new threat of invaders from over the sea emerged. We must endure these hardships in order for our people to survive."
+ lummak_through_mountains_and_forests:0 "Through Mountains and Forests"
+ lummak_through_mountains_and_forests_desc:0 "Large amounts of our lands are impassable for most, and especially for military forces. The knowledge of correct paths and density of the forest always helped us remain independent."
+ lummak_cocoanomics:0 "Cocoanomics"
+ lummak_cocoanomics_desc:0 "Cocoa is often valued not only as a tasty fruit, but in many places it serves as a dominant currency. This led to its plantations becoming very valuable and almost always worth of expansion."
+ lummak_maquchan_trade:0 "Maquchan Trade"
+ lummak_maquchan_trade_desc:0 "People of Achiqnatar were the kindest of our neighbors for the most part. Our cocoa fruits and obsidian is often sold for their metals and llamas."
+ lummak_eastern_newcomers:0 "Eastern Newcomers"
+ lummak_eastern_newcomers_desc:0 "The second coming of the sea people was a surprise for many. While they once again brought destruction, there is no doubt that they are far more technologically advanced. If we want to even stand a chance against them, we need to first study their ways."
