--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -169,3 +169,21 @@
  dashavi_asamani_liberty_desc:0 "Asamans were given large swats of land during the reign of Nezam Varazahan. This cascaded with even more privileges and in the current day the hold majority of power in the nation."
  dashavi_national_zealotry:0 "National Zealotry"
  dashavi_national_zealotry_desc:0 "Being underdog for most of history and only seen as a transitory region between 2 great civilizations, our people started to build a new national identity, mixing many Maqitan cultures and values, building something new and great."
+
+ frankrani_group_ideas:0 "Frankrani Minor Ideas"
+ frankrani_group_ideas_bonus:0 "Frankrani Minor Ambition"
+ frankrani_group_ideas_start:0 "Frankrani Minor Traditions"
+ frankrani_frankincense:0 "Qatran Merchants"
+ frankrani_frankincense_desc:0 "The aromatic Qatran is often produced in more tropical, eastern climates but is sold predominately by our merchants to the west. Many westerners believe that we are the ones that cultivate it and thus gave to it a more familiar name - Frankincense."
+ frankrani_qarasami_trade:0 "Qarasami Trade"
+ frankrani_qarasami_trade_desc:0 "Large variety of goods and merchants travelling near the Qarasam is a vital to the profit of many of our burghers and nobles. To secure their enterprise from piracy, they organize large, long-distance fleets which often sail as far as Cakrawalunia."
+ frankrani_muzbahi_connections:0 "Muzbahi Connections"
+ frankrani_muzbahi_connections_desc:0 "The fall of many Muzbahi states to the fawudian barbarians led many of their scholars and warriors to flee east, where they can thrive without a thread of a raid on their home."
+ frankrani_manayazani_glass:0 "Manayazani Glass"
+ frankrani_manayazani_glass_desc:0 ""Manayazan Glassmaker" is often synonymous with a great artist, who is willing to spend great amounts of effort and money to finish his great work. Vases and jewelry in Frankras often depict major religious events, further bringing them splendor."
+ frankrani_visparayan_adaptation:0 "Visparayan Adaptation"
+ frankrani_visparayan_adaptation_desc:0 "History of Visparaya goes as far as trade existed. Our settlements near these ancient nations have led to many of our people to embrace not only some of their customs, but also military tactics and political ideologies."
+ frankrani_eopedian_homeland:0 "Eopedian Homeland"
+ frankrani_eopedian_homeland_desc:0 "Eopedianism was originally considered to be a radical Ilumist sect, focused less on veneration of many prophets, but rather spirits that inhabit the lands. Many still have a deep connection with the God, thanks to this unique theology."
+ frankrani_yatunian_apotheosis:0 "Yatunian Apotheosis"
+ frankrani_yatunian_apotheosis_desc:0 "Yatun is probably the second most important figure in whole Maqitan world, the only person more important being Yerma itself. His great religious, militaristic and political deeds have shown the world, that our people are far greater and powerful than they assumed."
