flags loc fixes

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -182,3 +182,21 @@
  henling_homeland_of_gunnery_desc:0 "The Huoban, also known in the west as gunpowder, was mostly considered a festive attraction for most of its history, but due to the warlord wars of the thirteenth century, it's significance as a powerful weapon grew, leading to arms race of inventing new ways to make it more deadly."
  henling_dreams_of_unity:0 "Dreams of Unity"
  henling_dreams_of_unity_desc:0 "Distant ages of unified Zimahei have long passed. While those golden days may be gone, many still will do everything in the power to be known as the 'second unifier'. There is no doubt that if unity will ever come, it will not be through peaceful means."
+
+ xun_ideas:0 "Xun Ideas"
+ xun_ideas_bonus:0 "Xun Ambition"
+ xun_ideas_start:0 "Xun Traditions"
+ xun_guns_of_hou:0 "Guns of Hou"
+ xun_guns_of_hou_desc:0 "Hou Xiao is one of the most brilliant engineering minds of this era. Not only his guns were masterfully designed and beautifuly decorated, but their relative cheapness compared to older models made them incredibly versatile in many sieges and battles during the sixteenth century. Their most notable appearance was during the conquest of Nuodepe, when their capital was practically razed to the ground."
+ xun_western_taamtau_school:0 "Western School of Taamtau"
+ xun_western_taamtau_school_desc:0 "Taamtauian school of thought originated on Lamhoi, and in these parts it is still dominant way of thinking. It was unexpectedly embraced by Xun Zonglian at the start of his reign in 1398 by inviting many eastern scholars in order to increase control over his relatively small and on the verge of civilized world kingdom. To this day this philosophy is encouraged and thriving."
+ xun_into_the_dasenli:0 "Into the Dasenli"
+ xun_into_the_dasenli_desc:0 "Tribes of the Dasenli are relatively peaceful, howeve any attempts to civilize them still led to some opposition. Earlier, twelveth century attempt fell short and even weakened the state for many years, but more recent attempts were more successful, partially thanks to the missionary effort in the north."
+ xun_dencheng_trade:0 "Dencheng Trade"
+ xun_dencheng_trade_desc:0 "Dencheng is the most important waterway in the region, bringing not only humidity to farmlands, but it also serves as a major trade route, through which valuable goods produced in the Dasenli and Xun flatlands like tea, rice, gems and even rare, exotic wood. Some of them are also produced in the east, but our products are generally cheaper and produced in higher quantity."
+ xun_new_farmlands:0 "New Farmlands"
+ xun_new_farmlands_desc:0 "Newly conquered western lands originally were mostly a jungle wasteland, but thanks to the effort of our Zhuquan and his court and militia, they were turned into farmlands with a great efforts. In many parts the terrain is too steep to be developed through typical means, but thanks to technology of terrace farming embraced by some Gajifeng tribes, we were able to make much more of this land than initially anticipated."
+ xun_chengcheng_tea:0 "Chengcheng Tea"
+ xun_chengcheng_tea_desc:0 "Some say there are thousand varieties of tea spread across Hengtua. Many of those are just variants of some more popular and general brews, but tea harvested near the city of Chengcheng is easily recognized and famed across the whole Tsinhoi. It owes its renown to the strong, but somewhat sweet taste."
+ xun_land_of_many_beliefs:0 "Land of Many Beliefs"
+ xun_land_of_many_beliefs_desc:0 "While most core lands of Xun are compromised of traditional spirit believers, the northern hinterlands sometimes include elements of Samadian folk religions and Gajifeng people vastly continue their dedication to shrines and old tales. This led to not only our government, but also our people to be more tolerant of someone with a different worldview."
