Pasmangalan province names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3958,36 +3958,36 @@
  PROV3957: "Bephadug"
  PROV3958: "Bakebkun"
  PROV3959: "3959"
- PROV3960: "3960"
- PROV3961: "3961"
- PROV3962: "3962"
- PROV3963: "3963"
- PROV3964: "3964"
- PROV3965: "3965"
- PROV3966: "3966"
- PROV3967: "3967"
- PROV3968: "3968"
- PROV3969: "3969"
+ PROV3960: "Cgosop"
+ PROV3961: "Jinsop"
+ PROV3962: "Hsosco"
+ PROV3963: "Coasg"
+ PROV3964: "Ksjinsoog"
+ PROV3965: "Josak"
+ PROV3966: "Cocsop"
+ PROV3967: "Sloosop"
+ PROV3968: "Ssoqdg"
+ PROV3969: "Gcosg"
  PROV3970: "Gavi"
- PROV3971: "3971"
- PROV3972: "3972"
+ PROV3971: "Acoac"
+ PROV3972: "Soqo"
  PROV3973: "Kouyan"
  PROV3974: "3974"
  PROV3975: "Gotadan"
  PROV3976: "Mgujien"
- PROV3977: "3977"
+ PROV3977: "Poctscas"
  PROV3978: "Tepyin"
  PROV3979: "Nagan"
- PROV3980: "3980"
- PROV3981: "3981"
- PROV3982: "3982"
- PROV3983: "3983"
+ PROV3980: "Opscorg"
+ PROV3981: "Gosg"
+ PROV3982: "Hosgodg"
+ PROV3983: "Segjs"
  PROV3984: "3984"
  PROV3985: "3985"
- PROV3986: "3986"
- PROV3987: "3987"
- PROV3988: "3988"
- PROV3989: "3989"
+ PROV3986: "Socodi"
+ PROV3987: "Oqcdg"
+ PROV3988: "Kogoog"
+ PROV3989: "Oosgos"
  PROV3990: "3990"
  PROV3991: "3991"
  PROV3992: "3992"
