Pasmangalan province names redo
I fucked up last time, i hope i got it right this time.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1858,7 +1858,7 @@
  PROV1857: "Donakekce"
  PROV1858: "Gwinen"
  PROV1859: "Kodmena"
- PROV1860: "1860"
+ PROV1860: "Pineraykaan"
  PROV1861: "1861"
  PROV1862: "1862"
  PROV1863: "Moshika"
@@ -1867,8 +1867,8 @@
  PROV1866: "Horkopasko"
  PROV1867: "Cikasa"
  PROV1868: "Shkotenak"
- PROV1869: "1869"
- PROV1870: "1870"
+ PROV1869: "Bahoraykaan"
+ PROV1870: "Myawraykaan"
  PROV1871: "1871"
  PROV1872: "1872"
  PROV1873: "Wajikogun"
@@ -3957,37 +3957,37 @@
  PROV3956: "Kumnabehl"
  PROV3957: "Bephadug"
  PROV3958: "Bakebkun"
- PROV3959: "3959"
- PROV3960: "Cgosop"
- PROV3961: "Jinsop"
- PROV3962: "Hsosco"
- PROV3963: "Coasg"
- PROV3964: "Ksjinsoog"
- PROV3965: "Josak"
- PROV3966: "Cocsop"
- PROV3967: "Sloosop"
- PROV3968: "Ssoqdg"
- PROV3969: "Gcosg"
+ PROV3959: "Taungkyee"
+ PROV3960: "Matawtas"
+ PROV3961: "Hpwalmhug"
+ PROV3962: "Litenarmhuk"
+ PROV3963: "Yonekyi"
+ PROV3964: "Hcatehkya"
+ PROV3965: "Rwayhkya"
+ PROV3966: "Hkyawat"
+ PROV3967: "Aamyit"
+ PROV3968: "Pyaineal"
+ PROV3969: "Ahcein"
  PROV3970: "Gavi"
- PROV3971: "Acoac"
- PROV3972: "Soqo"
+ PROV3971: "Aaitko"
+ PROV3972: "Aahkarsamay"
  PROV3973: "Kouyan"
  PROV3974: "3974"
  PROV3975: "Gotadan"
  PROV3976: "Mgujien"
- PROV3977: "Poctscas"
+ PROV3977: "Sapate"
  PROV3978: "Tepyin"
  PROV3979: "Nagan"
- PROV3980: "Opscorg"
- PROV3981: "Gosg"
- PROV3982: "Hosgodg"
- PROV3983: "Segjs"
+ PROV3980: "Nhaoutyhaat"
+ PROV3981: "Koeakarr"
+ PROV3982: "Hcawng"
+ PROV3983: "Aalaungge"
  PROV3984: "3984"
  PROV3985: "3985"
- PROV3986: "Socodi"
- PROV3987: "Oqcdg"
- PROV3988: "Kogoog"
- PROV3989: "Oosgos"
+ PROV3986: "Kyaocarr"
+ PROV3987: "Saautmhur"
+ PROV3988: "Aariyarr"
+ PROV3989: "Saysote"
  PROV3990: "3990"
  PROV3991: "3991"
  PROV3992: "3992"
