--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -51,8 +51,8 @@
  COLONIAL_new_olegaria_ADJ:0 "New Olegarian"
  COLONIAL_evesland:0 "Evesland"
  COLONIAL_evesland_ADJ:0 "Eveslander"
- COLONIAL_alghaba:0 "Alghaba"
- COLONIAL_alghaba_ADJ:0 "Alghabian"
+ COLONIAL_yardan:0 "Yardan"
+ COLONIAL_yardan_ADJ:0 "Yardani"
  COLONIAL_cuanta_mora:0 "Cuanta Móra"
  COLONIAL_cuanta_mora_ADJ:0 "Cuantan"
  COLONIAL_new_ansgarland:0 "New Ansgarland"
