--- a/localisation/TD_01_flavour_bunelisuli_l_english.yml
+++ b/localisation/TD_01_flavour_bunelisuli_l_english.yml
@@ -31,3 +31,21 @@
  khumaarati_scourge_of_khutigaria_desc:0 "When people in the west saw our great banner of blue and white stripes, they knew it was an omen of death. Our raiders never lost a battle and never left a city unsacked."
  khumaarati_into_the_forest:0 "Into the Forest"
  khumaarati_into_the_forest_desc:0 "Northern forest are incredibely dangerous not only due to savages, but also the inhospitable climate and hostile wildlife, but when our neighbours grow stronger with each passing day, this is our best way of expansion."
+
+ bunelisuli_group_ideas:0 "Bunelisuli Minor Ideas"
+ bunelisuli_group_ideas_bonus:0 "Bunelisuli Minor Ambition"
+ bunelisuli_group_ideas_start:0 "Bunelisuli Minor Traditions"
+ bunelisul_herding_culture:0 "Herding Culture"
+ bunelisul_herding_culture_desc:0 "Harsh climate and low quality soils of the vast steppe has led us to embrace a more nomadic lifestyle, focused on herding horses and sheeps. While less effective than stable agriculture, it enforces a specific way of fighting against us, giving our people unique advantages."
+ bunelisuli_warriors_of_the_khan:0 "Warriors of the Khan"
+ bunelisuli_warriors_of_the_khan_desc:0 "Brave horsemen are the backbone of our society. Lifegoal of many is to give their life away for their favoured khan, because this behaviour is heavily rewarded with titles, loot and concubines."
+ bunelisuli_chotgoriin_nuntag:0 "Chötgöriin Nuntag"
+ bunelisuli_chotgoriin_nuntag_desc:0 "Also known as devil's dust, this explosive mix was the most crucial part of the success of Bunelisuli conquest of the steppe. This technology was barely known in the west and only developing in the east, which meant the first one to embrace it would rule the world."
+ bunelisuli_steppe_economics:0 "Steppe Economics"
+ bunelisuli_steppe_economics_desc:0 "Steppe is a wild place, even more so after the great collapse. Nomads in Kakigia scramble for land and resources, while the east is trying to restore their former glory, using remaining power they have to conquer and ravage the lands."
+ bunelisuli_eastern_wind:0 "Eastern Wind"
+ bunelisuli_eastern_wind_desc:0 "Bunelisuli Empire grew as fast as it fell apart, but nonetheless the fear that it inflicted upon its enemies is still haunting them to this very day. It will take decades or even centuries until someone will try to stand up to our raids."
+ bunelisuli_merhaanic_providence:0 "Merhaanic Providence"
+ bunelisuli_merhaanic_providence_desc:0 "The eternal and ancient tree that gave life to all people of the wide earth sees as their most favoured men. Many other people have been led astray from this truth, but our people are convinced that the old ways are not to be tampered with."
+ bunelisuli_legacy_of_the_empire:0 "Legacy of the Empire"
+ bunelisuli_legacy_of_the_empire_desc:0 "The Bunelisuli Empire was what showed the world what our people are capable of. It was known not only for its modern postal and envoy system, but also usage of firearms, unorthodox tactics and expert vassal management. Embracing the foundation built by this great state is what will lead us to eternal glory."
