--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -59,3 +59,21 @@
  samadia_reformed_vibagha_system_desc:0 "Ancient system of greatly dividing the land between trusted dynasties worked for a long time, but many now embrace a more systematic control over their domain."
  samadia_thousand_river_dances:0 "Thousand River Dances"
  samadia_thousand_river_dances_desc:0 "A strong sense of local cultural identity led to every town and village having their own local dance which is used to preserve folk tales and traditions."
+
+ paraderavi_ideas:0 "Paraderavian Ideas"
+ paraderavi_ideas_bonus:0 "Paraderavian Ambition"
+ paraderavi_ideas_start:0 "Paraderavian Traditions"
+ paraderavi_alangutar:0 "Alangutar"
+ paraderavi_alangutar_desc:0 "The oldest, longest and greatest wall of the known wall is still standing proudly after centuries of attempts by the nomads to breach it. It was built in the eleventh century following the fall of the kingdom of Xawaran. Its presence was crucial to the development of the idea of 'protector state' of Samadia. Even despite the recent Anavatic incursion the wall waits silently to once again serve its true purpose."
+ paraderavi_paqivazi_trade:0 "Paqivazi Trade"
+ paraderavi_paqivazi_trade_desc:0 "Xawaran was one of our most profitable trade partners for majority of our existence. It was the artery which connected Samadia with Hestan, often avoiding the turbulent Karunestan, ensuring the spices and ivory travel safely to their destination. Even after Paqivaz was overtook by Anavastan, we were able to keep many of our old deals and forge new ones with the young kingdom."
+ paraderavi_imperial_banadha:0 "Imperial Banadha"
+ paraderavi_imperial_banadha_desc:0 "Banadha is the name of a separated room or set of rooms in the house, with a specific purpose of being a living space for wifes of the most important man in the kingdom. Our Banadha is renowned thanks to the fact that it is so massive, it can be considered a completely separate palace complex."
+ paraderavi_paredeshian_farmlands:0 "Farmlands of Paredesh"
+ paraderavi_paredeshian_farmlands_desc:0 "Paredesh is the heartland of our empire, because it provides most valuable resources in the regino - spices, cotton, rice and wheat. All efforts of our empire always focused on keeping this land prosperous and safe from any disasters, whether it be flooding, droughts or  foreign raids. They might have fallen to Bunelisuli empire, but it is merely a brief setback, from which these lands can easily recover."
+ paraderavi_gurna_laws:0 "Gurnian Laws"
+ paraderavi_gurna_laws_desc:0 "Gurna Chatariun was seen wildly differently by most, even years after his reign. Many common folks and scholars saw him as a ruthless tyrant, focused only on achieving his personal goals of power and money, but some saw it as a necessary evil, forced upon him by the rising powers of Avukhima, Jatanipar and Anavastan. Nevertheless, what he did allowed the empire to survive in this increasingly centralized world."
+ paraderavi_protector_of_samadia:0 "Protector of Samadia"
+ paraderavi_protector_of_samadia_desc:0 "Idea of a protector state is not really new, as there ancient Tehnibake and Paredeshian states protecting lesser nations from outside raids, but only in the last five centuries it evolved into the idea it is today, with us guiding not only political state of the region, but also culture, religion, military and ideology. Surely someday we will be overtaken, but have to ensure that our reign will be as long and as gold as it can be."
+ paraderavi_new_methods_of_warfare:0 "New Methods of Warfare"
+ paraderavi_new_methods_of_warfare_desc:0 "Nomadic raids of the eleventh and twelveth century have led to increased need of finding a way to effectively combat these horsemen. This is when Danase pikemen were finally given the chance to shine. In the following years, their formations became the default way of fighting in the empire, and consequently in the rest of Samadia. With the advancements of the gunpowder technology in seventeenth century, they were made even stronger, being able to not only perfectly defend, but also systematically attack."
