--- a/localisation/TD_01_flavour_colonial_l_english.yml
+++ b/localisation/TD_01_flavour_colonial_l_english.yml
@@ -11,7 +11,7 @@
  TD_new_world_colonial.2.b: "I don't feel like trading with primitives."
  TD_new_world_colonial.2.c: "You belong on a plantation!"
  TD_trading_with_the_natives: "Trading with the natives"
- desc_TD_trading_with_the_natives: "Colonists in this province often trade with neighboring natives.
+ desc_TD_trading_with_the_natives: "Colonists in this province often trade with neighboring natives."
 
  TD_new_world_colonial.3.t: "Bankrupt Colony"
  TD_new_world_colonial.3.desc: "It appears that one of our colonies has been abandoned by none other than the investor who started it, but thankfully he was captured and swiftly executed. Now, the people withouth new settlers lack proper food and supplies will struggle to survive without our help. What shall we do about it?"
@@ -66,8 +66,8 @@
  
  
 
-#localization of event random_events.2 has been moved here.
-random_event.EVTNAME2: "Emergent Culture in the Colonies"
+ #localization of event random_events.2 has been moved here.
+ random_event.EVTNAME2: "Emergent Culture in the Colonies"
  random_event.EVTDESC2A: "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [talamgalter_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Talamgalter, and this sentiment is beginning to spread throughout [talamgalter_province.GetAreaName]."
  random_event.EVTDESC2B: "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [thiccen_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Thiccen, and this sentiment is beginning to spread throughout [thiccen_province.GetAreaName]."
  random_event.EVTDESC2C: "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [mexican_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Mexicans, and this sentiment is beginning to spread throughout [mexican_province.GetAreaName]."
