--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -214,7 +214,7 @@
  snaiwatzer_peasant_influences: "Peasant Influences"
  snaiwatzer_peasant_influences_desc: "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They have worked hard to help us realize this, and with many revolutionary ideas from the south accelerating the societal reforms within our country, we might as well listen to them."
  snaiwatzer_high_altitude_defenses: "High Altitude Defenses"
- snaiwatzer_high_altitude_defenses_desc: ""Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Taedium."
+ snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Taedium."
  snaiwatzer_mountain_folk: "Mountain Folk"
  snaiwatzer_mountain_folk_desc: "Long time have passed since our Zbojaner ancestors came here, and in effect, we aren't truly only Zbojaner, or Silvestrine, we are a mix of both, and that what makes us, Snaiwatzer people, unique, and our nobility prides itself in it."
  snaiwatzer_new_imperial_mint: "New Imperial Mint"
