--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -6,7 +6,7 @@
  TAEDIUM_NORTHERN_LANDS_DESC: "Despite internal instability, the Ehrenic Confederation is dominant over the northern straits with influence all over the region. Tummic and Nifthemi resistance is struggling to overcome the growing ambitions of Consul Diedrich Schumacher as the remnants of the first confederacy lick their wounds in Dorchean Isles. Marstonian duchy of Ziemelia is satisfied with their recent territorial gains, but not for long - looking at their cultural bretherens and neighbouring merchant Republic of Uzkolia as a potential target. Sons of King Eadwig fight for his crown while resisting Indriger and Labosian opportunists from abroad. Who will finally unite the region and achieve indisputable dominance?"
 
  TAEDIUM_AQERB_BOOKMARK_TITLE: "£lobby_list_entry_3£"
- TAEDIUM_AQERB_BOOKMARK_DESC: "The peninsula is a frontline of major conflicts between Sigilian and Aqerbic countries. Ambitious king of Narbona aggresively expands into Yaltazim mainland with little to no resistance while the Kingdom of Ignidunta seeks to completely control regional trade routes. But all is not lost to Yaltazims - Nusabates of Nahshaharos and Antawil have ambitions of their own. Narbonese borderlands slowly get tired of their overlords ruler and plot to gain independence. With no place to expand many of these states look to other frontiers overseas..."
+ TAEDIUM_AQERB_BOOKMARK_DESC: "The peninsula is a frontline of major conflicts between Sigilian and Aqerbic countries. Ambitious king of Narbona aggresively expands into Yaltazim mainland with little to no resistance while the Kingdom of Ignidunta seeks to completely control regional trade routes. But all is not lost to Yaltazims - Nusabates of Nahshaharos and Antawil have ambitions of their own. Narbonese borderlands slowly get tired of their overlords rule and plot to gain independence. With no place to expand, many of these states look for new frontiers to find overseas..."
 
  TAEDIUM_KAKIGIA_BOOKMARK_TITLE: "£lobby_list_entry_4£"
  TAEDIUM_KAKIGIA_BOOKMARK_DESC: ""
@@ -20,8 +20,8 @@
  TAEDIUM_PAQIVAZ_BOOKMARK_TITLE: "Highway of Civilization"
  TAEDIUM_PAQIVAZ_BOOKMARK_DESC: ""
 
- TAEDIUM_HENGTUA_BOOKMARK_TITLE: "The Far East"
+ TAEDIUM_HENGTUA_BOOKMARK_TITLE: "Eastern Zealots"
  TAEDIUM_HENGTUA_BOOKMARK_DESC: ""
 
- TAEDIUM_SAMADIA_BOOKMARK_TITLE: "Merchants and Zealots"
+ TAEDIUM_SAMADIA_BOOKMARK_TITLE: "Merchants of Amsulia"
  TAEDIUM_SAMADIA_BOOKMARK_DESC: "REPLACE_ME"
