--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -14,14 +14,11 @@
  TAEDIUM_WASICHANTLIA_BOOKMARK_TITLE: "£lobby_list_entry_5£"
  TAEDIUM_WASICHANTLIA_BOOKMARK_DESC: ""
 
- TAEDIUM_HESTAN_BOOKMARK_TITLE: "Hestani Stagnation"
- TAEDIUM_HESTAN_BOOKMARK_DESC: ""
+ TAEDIUM_SAMADIA_BOOKMARK_TITLE: "£lobby_list_entry_6£"
+ TAEDIUM_SAMADIA_BOOKMARK_DESC: "REPLACE_ME"
 
- TAEDIUM_PAQIVAZ_BOOKMARK_TITLE: "Highway of Civilization"
+ TAEDIUM_PAQIVAZ_BOOKMARK_TITLE: "£lobby_list_entry_7£"
  TAEDIUM_PAQIVAZ_BOOKMARK_DESC: ""
 
- TAEDIUM_HENGTUA_BOOKMARK_TITLE: "Eastern Zealots"
+ TAEDIUM_HENGTUA_BOOKMARK_TITLE: "£lobby_list_entry_8£"
  TAEDIUM_HENGTUA_BOOKMARK_DESC: ""
-
- TAEDIUM_SAMADIA_BOOKMARK_TITLE: "Merchants of Amsulia"
- TAEDIUM_SAMADIA_BOOKMARK_DESC: "REPLACE_ME"
